test/resources/parser/failing/testStructure4.scala
InvalidModule {
  val x: Int = 1
}